update header and footer from product portal

--- a/book/scss/style.scss
+++ b/book/scss/style.scss
@@ -45,3 +45,9 @@ body {
     @extend %nio-text-input--singleline;
   }
 }
+
+$header-height: 63px;
+.book-summary,
+.book-body {
+  top: $header-height;
+}
