full width footer

--- a/book/scss/footer.scss
+++ b/book/scss/footer.scss
@@ -26,6 +26,7 @@
       width: $tablet;
     }
     @media (min-width: $desktop) {
+      width: 100%;
       max-width: 1140px;
     }
     margin: 0 auto;
