start styling sidbar

--- a/book/scss/style.scss
+++ b/book/scss/style.scss
@@ -16,6 +16,10 @@ body {
   }
 }
 
+.book-summary {
+  background: white;
+}
+
 .book-summary ul.summary li.active>a {
   color: $palette-primary;
   border-right: 4px solid $palette-primary;
