--- a/book/scss/style.scss
+++ b/book/scss/style.scss
@@ -20,21 +20,21 @@
 .book-summary {
   font: normal 400 16px / 1.4 Lato, sans serif;
   background: white;
-}
-
-.book-summary ul.summary li a {
-  padding-left: 2.5rem;
-}
-
-
-.book-summary ul.summary li a:hover {
-  text-decoration: none;
-  color: $palette-alternate;
-}
-
-.book-summary ul.summary li.active>a {
-  color: $palette-primary;
-  border-right: 4px solid $palette-primary;
+  ul.summary {
+    li {
+      a {
+        padding-left: 2.5rem;
+        &:hover {
+          text-decoration: none;
+          color: $palette-alternate;
+        }
+      }
+    }
+    li.active > a {
+      color: $palette-primary;
+      border-right: 4px solid $palette-primary;
+    }
+  }
 }
 
 .summary {
@@ -43,17 +43,56 @@
 
 .markdown-section {
   color: $palette-black;
-}
-
-.markdown-section a {
-  color: $palette-primary;
-  font: normal 400 16px / 1.5 Lato, sans serif;
-  margin-right: 0;
-}
-
-.markdown-section a:hover {
-  text-decoration: none;
-  color: $palette-alternate;
+  h1 {
+    @extend %nio-h1;
+    font-size: 48px;
+    font-weight: 500;
+    color: $palette-primary;
+    line-height: 55px;
+    margin-bottom: 1.7rem;
+  }
+  h2 {
+    @extend %nio-h2;
+    font-size: 28px;
+    font-weight: 300;
+    line-height: 38px;
+  }
+  h3 {
+    @extend %nio-h3;
+    font-size: 22px;
+    font-weight: 400;
+    line-height: 32px;
+  }
+  h4 {
+    @extend %nio-h4;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 28px;
+  }
+  h5 {
+    @extend %nio-h5;
+    font-size: 16px;
+    font-weight: 300;
+    line-height: 26px;
+  }
+  h6 {
+    @extend %nio-h6;
+    font-size: 14px;
+    font-weight: 700;
+    line-height: 28px;
+  }
+  a {
+    color: $palette-primary;
+    &:hover {
+      text-decoration: none;
+      color: $palette-alternate;
+    }
+  }
+  pre {
+    border: 0.5px solid $palette-snow;
+    border-radius: 7px;
+    color: #354042;
+  }
 }
 
 .chapter {
@@ -70,56 +109,9 @@
   }
 }
 
-.markdown-section h1 {
-  @extend %nio-h1;
-  font-size: 48px;
-  font-weight: 500;
-  color: $palette-primary;
-  line-height: 55px;
-  margin-bottom: 1.7rem;
-}
-.markdown-section h2 {
-  @extend %nio-h2;
-  font-size: 28px;
-  font-weight: 300;
-  line-height: 38px;
-}
-.markdown-section h3 {
-  @extend %nio-h3;
-  font-size: 22px;
-  font-weight: 400;
-  line-height: 32px;
-}
-.markdown-section h4 {
-  @extend %nio-h4;
-  font-size: 18px;
-  font-weight: 400;
-  line-height: 28px;
-}
-.markdown-section h5 {
-  @extend %nio-h5;
-  font-size: 16px;
-  font-weight: 300;
-  line-height: 26px;
-}
-.markdown-section h6 {
-  @extend %nio-h6;
-  font-size: 14px;
-  font-weight: 700;
-  line-height: 28px;
-}
-
 .label {
   font-size: 0.85714286rem;
   font-weight: 600;
-}
-
-.markdown-section {
-  pre {
-    border: 0.5px solid $palette-snow;
-    border-radius: 7px;
-    color: #354042;
-  }
 }
 
 #book-search-input {
