CE-135 CE-136 style search bar

--- a/book/scss/style.scss
+++ b/book/scss/style.scss
@@ -115,9 +115,19 @@
 }
 
 #book-search-input {
-  padding: 1.5rem;
+  padding: 2.5rem;
   input {
+    @extend %nio-text-input;
     @extend %nio-text-input--singleline;
+    padding: 2rem;
+    &:hover {
+      @extend %nio-text-input;
+      @extend %nio-text-input--singleline;
+      padding: 2rem;
+    }
+    &:focus {
+      padding: 2rem;
+    }
   }
 }
 
