rearrange nav items, rename to platform

--- a/_layouts/website/_header.html
+++ b/_layouts/website/_header.html
@@ -10,14 +10,14 @@
       <nav class="nav">
         <ul class="nav__list list-unstyled">
       <li class="nav__list--item">
-        <a id="nav__list--workshop" href="https://nio.school" target="_blank" class="nav__list--anchor">workshop</a>
-      </li>
-      <li class="nav__list--item">
         <a id="nav__list--docs" href="https://docs.n.io" target="_blank" class="nav__list--anchor">docs</a>
       </li>
       <li class="nav__list--item">
+        <a id="nav__list--workshop" href="https://nio.school" target="_blank" class="nav__list--anchor">workshop</a>
+      </li>
+      <li class="nav__list--item">
         <a href="https://app.n.io/about" class="nav__list--anchor ">
-            about n.io
+            platform
         </a>
         <input id="sub-nav__about" type="checkbox" class="nav-item__toggle">
         <label for="sub-nav__about" class="nav-item__toggle--label"><i class="fa fa-lg fa-plus default"></i> <i class="fa fa-lg fa-minus checked"></i></label>
