add workshops after platform

--- a/_layouts/website/_header.html
+++ b/_layouts/website/_header.html
@@ -13,9 +13,6 @@
         <a id="nav__list--docs" href="https://docs.n.io" target="_blank" class="nav__list--anchor">docs</a>
       </li>
       <li class="nav__list--item">
-        <a id="nav__list--workshop" href="https://nio.school" target="_blank" class="nav__list--anchor">workshop</a>
-      </li>
-      <li class="nav__list--item">
         <a href="https://app.n.io/about" class="nav__list--anchor ">
             platform
         </a>
@@ -26,6 +23,9 @@
             <a href="https://app.n.io/about/case-studies" class="sub-nav__item--anchor">case study</a>
           </li>
         </ul>
+      </li>
+      <li class="nav__list--item">
+        <a id="nav__list--workshop" href="https://nio.school" target="_blank" class="nav__list--anchor">workshops</a>
       </li>
       <li class="nav__list--item"><a href="https://designer.n.io" class="button__designer">
             go to designer<span> (only available on desktop)</span></a></li></ul></nav></div></header>
