add additional links

--- a/_layouts/website/_footer.html
+++ b/_layouts/website/_footer.html
@@ -34,7 +34,9 @@
                 <ul>
                     <li><a href="https://docs.n.io" target="_blank">docs</a></li>
                     <li><a href="https://app.n.io/settings">account</a></li>
+			        <li><a href="https://nio.school/" target="_blank">workshops</a></li>
                     <li class="anchor--designer"><a href="https://designer.n.io">go to designer <span>(only available on desktop)</span></a></li>
+			        <li><a href="https://app.n.io/support">support</a></li>
                 </ul>
             </div>
         </div>
