--- a/book/scss/footer.scss
+++ b/book/scss/footer.scss
@@ -55,11 +55,9 @@
           margin-top: 2em;
         }
       }
-      .company-links ul li {
+      .company-links ul li,
+      .product-links ul li  {
         width: 50%;
-      }
-      .product-links ul li {
-        width: 100%;
       }
       .company-links, .product-links {
         width:100%;
