add margins to page toc

--- a/book/scss/style.scss
+++ b/book/scss/style.scss
@@ -17,6 +17,11 @@
   }
 }
 
+.page-toc {
+  margin-bottom: 2rem;
+  margin-left: 2rem;
+}
+
 .book-header {
   font: normal 400 16px / 1.6 Lato, sans serif;
 }
