--- a/_layouts/website/_header.html
+++ b/_layouts/website/_header.html
@@ -21,7 +21,7 @@
                     <a id="nav__list--workshop" href="https://nio.school" class="nav__list--anchor">workshops</a>
                 </li>
                 <li class="nav__list--item">
-                    <a id="nav__list--workshop" href="https://app.n.io/settings" class="nav__list--anchor">support</a>
+                    <a id="nav__list--workshop" href="https://app.n.io/support" class="nav__list--anchor">support</a>
                     <!-- Mobile Sub-Navigation Toggle -->
                     <input class="nav-item__toggle" id="sub-nav__support" type="checkbox">
                     <label class="nav-item__toggle--label" for="sub-nav__support">
@@ -36,7 +36,7 @@
                     </ul>
                 </li>
                 <li class="nav__list--item nav__list--item--settings">
-                    <a href="https://app.n.io" class="nav__list--anchor">
+                    <a href="https://app.n.io/settings" class="nav__list--anchor">
                         <i class="nio nio-profile"></i>
                         <span>settings</span>
                     </a>
