add nio innovation, LLC

--- a/_layouts/website/_footer.html
+++ b/_layouts/website/_footer.html
@@ -56,7 +56,7 @@
             <a href="https://n.io/privacy" target="_blank">privacy policy</a> | <a href="https://n.io/terms" target="_blank">terms and conditions</a>
           </p>
           <p>
-            <a href="https://docs.n.io/copyright.html">&copy; n.io innovation, LLC. All Rights Reserved.</a>
+            <a href="https://docs.n.io/copyright.html">&copy; nio innovation, LLC. All Rights Reserved.</a>
           </p>
         </div>
     </footer>
