open designer link in new window

--- a/_layouts/website/_header.html
+++ b/_layouts/website/_header.html
@@ -68,7 +68,7 @@
                     </a>
                 </li>
                 <li class="nav__list--item nav__list--item--designer">
-                  <a href="https://designer.n.io">
+                  <a href="https://designer.n.io" target="_blank">
                   <button class="n-button n-button--primary">
                     go to designer
                   </button>
