style table header, reduce logo on footer

--- a/book/scss/style.scss
+++ b/book/scss/style.scss
@@ -220,6 +220,11 @@ $border-radius: 7px;
   sup {
     font-size: 11px;
   }
+  table {
+    th {
+      text-align: left;
+    }
+  }
 }
 
 .label {
