update header and footer html and css from portal

--- a/_layouts/website/_analytics.html
+++ b/_layouts/website/_analytics.html
@@ -4,7 +4,7 @@
   window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
   ga('require', 'linker');
   ga('create', '{{ config.pluginsConfig['theme-nio']['ga-code'] }}', 'auto', {'allowLinker': true});
-  ga('linker:autoLink', ['n.io', 'niolabs.com', 'nio.school']);
+  ga('linker:autoLink', ['n.io', 'niolabs.com']);
 </script>
 <script async src='https://www.google-analytics.com/analytics.js'></script>
 {% endif %}
