--- a/_layouts/website/_header.html
+++ b/_layouts/website/_header.html
@@ -1,40 +1,16 @@
 <header class="header">
     <div class="header__container">
         <a href="https://app.n.io">
-            <svg id="docs-logo" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1160 360" class="header__logo">
-              <defs>
-                <style>.cls-1{fill:#e6e9ee;}.cls-2{fill:#fff;}
-                </style>
-              </defs>
-              <title>Artboard 17
-              </title>
-              <path class="cls-1" d="M625.6,57.3V267H591.4L589,246.6c-11.4,17.7-29.7,23.7-47.7,23.7-43.5,0-76.2-28.8-76.2-77.4,0-51,32.1-77.4,75.3-77.4,15.6,0,39.9,8.4,48.6,23.7V57.3ZM501.7,192.9c0,25.8,18.6,43.5,42,43.5,23.1,0,42.9-16.8,42.9-43.5,0-25.8-19.8-43.2-42.9-43.2C520.3,149.7,501.7,166.2,501.7,192.9Z"/>
-              <path class="cls-1" d="M804.4,193.2c0,42.6-29.1,77.1-77.1,77.1s-76.8-34.5-76.8-77.1c0-42.3,29.4-77.1,76.5-77.1S804.4,150.9,804.4,193.2Zm-117.3,0c0,22.5,13.5,43.5,40.2,43.5s40.2-21,40.2-43.5c0-22.2-15.6-43.8-40.2-43.8C700.9,149.4,687.1,171,687.1,193.2Z"/>
-              <path class="cls-1" d="M956.5,248.1c-17.1,16.8-35.1,23.4-57,23.4-42.9,0-78.6-25.8-78.6-78.3s35.7-78.3,78.6-78.3c21,0,37.2,6,53.4,21.9l-23.1,24.3a44.92,44.92,0,0,0-29.7-11.7c-24.6,0-42.6,18-42.6,43.8,0,28.2,19.2,43.2,42,43.2,11.7,0,23.4-3.3,32.4-12.3Z"/>
-              <path class="cls-1" d="M1069.29,158.4c-10.5-9.9-22.5-13.2-36.6-13.2-17.4,0-27,5.4-27,14.7,0,9.6,8.7,15,27.6,16.2,27.9,1.8,63.3,8.1,63.3,47.4,0,26.1-21.3,48.6-63.6,48.6-23.4,0-46.8-3.9-68.4-26.4l18-26.1c10.5,11.7,34.5,20.4,51,20.7,13.8.3,26.7-6.9,26.7-17.7,0-10.2-8.4-14.4-29.4-15.6-27.9-2.1-61.2-12.3-61.2-45.9,0-34.2,35.4-46.2,62.4-46.2,23.1,0,40.5,4.5,57.6,19.5Z"/>
-              <path class="cls-2" d="M156.69,267.43V189.72c0-22.59-12.35-39.76-35.84-39.76-22.59,0-38,19-38,41.56v75.9H46.45V118.64H79.28l2.41,20.18c15.06-14.76,30.12-22.29,48.79-22.29,34.94,0,63,26.21,63,72.89v78Z"/>
-              <path class="cls-2" d="M264,77.07c0,28.61-43.37,28.61-43.37,0S264,48.45,264,77.07ZM224,118.34V267.43h36.74V118.34Z"/>
-              <path class="cls-2" d="M444.74,193.33c0,42.78-29.22,77.41-77.41,77.41s-77.11-34.63-77.11-77.41c0-42.47,29.52-77.41,76.81-77.41S444.74,150.87,444.74,193.33Zm-117.77,0c0,22.6,13.55,43.68,40.36,43.68s40.36-21.08,40.36-43.68c0-22.29-15.66-44-40.36-44C340.83,149.36,327,171,327,193.33Z"/>
-            </svg>
-            <svg id="workshop-logo" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 2032 388" class="header__logo">
-              <defs>
-                <style>.cls-1{fill:#e6e9ee;}.cls-2{fill:#fff;}
-                </style>
-              </defs>
-              <title>nioworkshops logo</title>
-              <path class="cls-1" d="M604.9,134.8l32.4,111.3,33.9-111.3h40.5L660.1,283.6H617.5l-15.3-43.8L589,190.3l-13.2,49.5-15.3,43.8H517.9L466,134.8h40.8l33.9,111.3,32.1-111.3Z"/>
-              <path class="cls-1" d="M871.6,209.2c0,42.6-29.1,77.1-77.1,77.1s-76.8-34.5-76.8-77.1c0-42.3,29.4-77.1,76.5-77.1S871.6,166.9,871.6,209.2Zm-117.3,0c0,22.5,13.5,43.5,40.2,43.5s40.2-21,40.2-43.5c0-22.2-15.6-43.8-40.2-43.8C768.1,165.4,754.3,187,754.3,209.2Z"/>
-              <path class="cls-1" d="M930.69,135.1l2.7,17.1c11.4-18.3,26.7-21,41.7-21,15.3,0,30,6,38.1,14.1l-16.5,31.8c-7.5-6.3-14.4-9.6-26.4-9.6-19.2,0-36.9,10.2-36.9,37.5v78h-36.6V135.1Z"/>
-              <path class="cls-1" d="M1062.69,73.3V194.5l49.8-59.4h43.8v2.1L1096,204.7l68.7,75.6V283h-44.1l-57.9-66.9V283h-36.6V73.3Z"/>
-              <path class="cls-1" d="M1278.09,174.4c-10.5-9.9-22.5-13.2-36.6-13.2-17.4,0-27,5.4-27,14.7,0,9.6,8.7,15,27.6,16.2,27.9,1.8,63.3,8.1,63.3,47.4,0,26.1-21.3,48.6-63.6,48.6-23.4,0-46.8-3.9-68.4-26.4l18-26.1c10.5,11.7,34.5,20.4,51,20.7,13.8.3,26.7-6.9,26.7-17.7,0-10.2-8.4-14.4-29.4-15.6-27.9-2.1-61.2-12.3-61.2-45.9,0-34.2,35.4-46.2,62.4-46.2,23.1,0,40.5,4.5,57.6,19.5Z"/>
-              <path class="cls-1" d="M1365.39,73v82.2c13.2-17.1,29.4-22.2,46.2-22.2,42,0,60.6,28.5,60.6,72v78h-36.6V205.3c0-27-14.1-38.4-33.6-38.4-21.6,0-36.6,18.3-36.6,40.5V283h-36.6V73Z"/>
-              <path class="cls-1" d="M1650.09,209.2c0,42.6-29.1,77.1-77.1,77.1s-76.8-34.5-76.8-77.1c0-42.3,29.4-77.1,76.5-77.1S1650.09,166.9,1650.09,209.2Zm-117.3,0c0,22.5,13.5,43.5,40.2,43.5s40.2-21,40.2-43.5c0-22.2-15.6-43.8-40.2-43.8C1546.59,165.4,1532.79,187,1532.79,209.2Z"/>
-              <path class="cls-1" d="M1675.28,344.8V135.1h34.2l2.4,20.4c11.4-16.5,31.2-23.7,48-23.7,45.6,0,75.9,33.9,75.9,77.4,0,43.2-27.3,77.4-74.7,77.4-15.6,0-38.7-4.8-49.2-21v79.2Zm123.9-135.6c0-23.1-15.6-42-42-42s-42,18.9-42,42,17.1,42,42,42S1799.19,232.3,1799.19,209.2Z"/>
-              <path class="cls-1" d="M1959.39,174.4c-10.5-9.9-22.5-13.2-36.6-13.2-17.4,0-27,5.4-27,14.7,0,9.6,8.7,15,27.6,16.2,27.9,1.8,63.3,8.1,63.3,47.4,0,26.1-21.3,48.6-63.6,48.6-23.4,0-46.8-3.9-68.4-26.4l18-26.1c10.5,11.7,34.5,20.4,51,20.7,13.8.3,26.7-6.9,26.7-17.7,0-10.2-8.4-14.4-29.4-15.6-27.9-2.1-61.2-12.3-61.2-45.9,0-34.2,35.4-46.2,62.4-46.2,23.1,0,40.5,4.5,57.6,19.5Z"/>
-              <path class="cls-2" d="M162.69,283.43V205.72c0-22.59-12.35-39.76-35.84-39.76-22.59,0-38,19-38,41.56v75.9H52.45V134.64H85.28l2.41,20.18c15.06-14.76,30.12-22.29,48.79-22.29,34.94,0,63,26.21,63,72.89v78Z"/>
-              <path class="cls-2" d="M270,93.07c0,28.61-43.37,28.61-43.37,0S270,64.45,270,93.07ZM230,134.34V283.43h36.74V134.34Z"/>
-              <path class="cls-2" d="M450.74,209.33c0,42.78-29.22,77.41-77.41,77.41s-77.11-34.63-77.11-77.41c0-42.47,29.52-77.41,76.81-77.41S450.74,166.87,450.74,209.33Zm-117.77,0c0,22.6,13.55,43.68,40.36,43.68s40.36-21.08,40.36-43.68c0-22.29-15.66-44-40.36-44C346.83,165.36,333,187,333,209.33Z"/>
-            </svg>
+          <svg id="nio_logo_white" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 674 402" class="header__logo">
+            <defs>
+              <style>.cls-1{fill:#fff;}
+              </style>
+            </defs>
+            <title>nio_logo_white</title>
+            <path class="cls-1" d="M253.69,293.43V215.72c0-22.59-12.35-39.76-35.84-39.76-22.59,0-38,19-38,41.56v75.9H143.45V144.64h32.83l2.41,20.18c15.06-14.76,30.12-22.29,48.79-22.29,34.94,0,63,26.21,63,72.89v78Z"/>
+            <path class="cls-1" d="M361,103.07c0,28.61-43.37,28.61-43.37,0S361,74.45,361,103.07ZM321,144.34V293.43h36.74V144.34Z"/>
+            <path class="cls-1" d="M541.74,219.33c0,42.78-29.22,77.41-77.41,77.41s-77.11-34.63-77.11-77.41c0-42.47,29.52-77.41,76.81-77.41S541.74,176.87,541.74,219.33Zm-117.77,0c0,22.6,13.55,43.68,40.36,43.68s40.36-21.08,40.36-43.68c0-22.29-15.66-44-40.36-44C437.83,175.36,424,197,424,219.33Z"/>
+          </svg>
         </a>
         <input id="header__toggle" type="checkbox" class="header__toggle">
         <label for="header__toggle" class="header__toggle--label"></label>
@@ -44,10 +20,13 @@
                     <a id="nav__list--docs" href="https://docs.n.io" class="nav__list--anchor">docs</a>
                 </li>
                 <li class="nav__list--item">
-                    <a id="nav__list--workshop" href="https://nio.school" class="nav__list--anchor">workshops</a>
+                    <a id="nav__list--blocks" href="https://blocks.n.io" class="nav__list--anchor">blocks</a>
                 </li>
                 <li class="nav__list--item">
-                    <a id="nav__list--workshop" href="https://app.n.io/support" class="nav__list--anchor">support</a>
+                    <a id="nav__list--workshop" href="https://workshops.n.io" class="nav__list--anchor">workshops</a>
+                </li>
+                <li class="nav__list--item">
+                    <a id="nav__list--support" href="https://app.n.io/support" class="nav__list--anchor">support</a>
                     <!-- Mobile Sub-Navigation Toggle -->
                     <input class="nav-item__toggle" id="sub-nav__support" type="checkbox">
                     <label class="nav-item__toggle--label" for="sub-nav__support">
