add closing tags to header inputs

--- a/_layouts/website/_header.html
+++ b/_layouts/website/_header.html
@@ -12,7 +12,7 @@
             <path class="cls-1" d="M541.74,219.33c0,42.78-29.22,77.41-77.41,77.41s-77.11-34.63-77.11-77.41c0-42.47,29.52-77.41,76.81-77.41S541.74,176.87,541.74,219.33Zm-117.77,0c0,22.6,13.55,43.68,40.36,43.68s40.36-21.08,40.36-43.68c0-22.29-15.66-44-40.36-44C437.83,175.36,424,197,424,219.33Z"/>
           </svg>
         </a>
-        <input id="header__toggle" type="checkbox" class="header__toggle">
+        <input id="header__toggle" type="checkbox" class="header__toggle" />
         <label for="header__toggle" class="header__toggle--label"></label>
         <nav class="nav">
             <ul class="nav__list list-unstyled">
@@ -28,7 +28,7 @@
                 <li class="nav__list--item">
                     <a id="nav__list--support" href="https://app.n.io/support" class="nav__list--anchor">support</a>
                     <!-- Mobile Sub-Navigation Toggle -->
-                    <input class="nav-item__toggle" id="sub-nav__support" type="checkbox">
+                    <input class="nav-item__toggle" id="sub-nav__support" type="checkbox" />
                     <label class="nav-item__toggle--label" for="sub-nav__support">
                         <i class="nio nio-add default"></i>
                         <i class="nio nio-minus checked"></i>
